# Co-GameBot

./: README.md  go.mod
bot/: Cargo.toml
bot/src/: error.rs  game.rs  game_manager.rs  interaction_ext.rs  main.rs
bot/src/game/: dummy.rs
co-gamebot/: Cargo.toml
dummy-game/: Cargo.toml
dummy-game/src/: lib.rs
